fix[ticho-starter-view]: 调整业务错误码和参数校验逻辑